<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Art Store</string>
    <string name="reg" translatable="false">Regístrate en ArtStore</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="btnCamara" translatable="false">btnCamara</string>
    <string name="confirmacion" translatable="false">Confirma tu compra</string>
    <string name="comprar" translatable="false">comprar</string>
    <string name="rbbitcoin" translatable="false">Bitcoin</string>
    <string name="rbpaypal" translatable="false">paypal</string>
    <string name="rbcreditcard" translatable="false">credit card</string>
    <string name="rbefecty" translatable="false">efecty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_app_login" translatable="false">Art Store</string>
    <string name="user_name" translatable="false">Usuario / email</string>
    <string name="user_password" translatable="false">Contraseña</string>
    <string name="btn_login" translatable="false">Ingresar</string>
    <string name="textlogin" translatable="false">Login</string>
    <string name="textregister" translatable="false">Registro</string>
    <string name="fullname" translatable="false">Nombre Completo</string>
    <string name="btn_register" translatable="false">Crear Cuenta</string>
    <string name="link_register" translatable="false">Crear una cuenta</string>
    <string name="iniciarsesion" translatable="false">Iniciar sesión en ArtStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="not_firebase_auth" translatable="false">not_firebase</string>



</resources>
